[metadata]
name = networking-interconnection
summary = BGPVPN interconnection driver OpenStack Neutron
description-file =
    README.md
author = SAP SE
author-email =
home-page = https://github.com/sapcc/networking-interconnection
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    networking_interconnection

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.service_plugins =
    networking-interconnection = networking_interconnection.plugins.ml2.plugin:InterconnectionPlugin
neutron.db.alembic_migrations =
    networking-interconnection = networking_interconnection.db.migration:alembic_migrations
oslo.config.opts =
    networking-interconnection.interconnection = networking_interconnection.opts:list_interconnection_opts
oslo.policy.policies =
    networking-interconnection = networking_interconnection.policies:list_rules
neutron.policies =
    networking-interconnection = networking_interconnection.policies:list_rules
openstack.neutronclient.v2 =
    interconnection_create = networking_interconnection.neutronclient.osc.v2.interconnection:CreateInterconnection
    interconnection_show = networking_interconnection.neutronclient.osc.v2.interconnection:ShowInterconnection
    interconnection_set = networking_interconnection.neutronclient.osc.v2.interconnection:SetInterconnection
    interconnection_delete = networking_interconnection.neutronclient.osc.v2.interconnection:DeleteInterconnection
    interconnection_list = networking_interconnection.neutronclient.osc.v2.interconnection:ListInterconnection

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_interconnection/locale/networking_interconnection.pot

[compile_catalog]
directory = networking_interconnection/locale
domain = networking_interconnection

[update_catalog]
domain = networking_interconnection
output_dir = networking_interconnection/locale
input_file = networking_interconnection/locale/networking_interconnection.pot

[wheel]
universal = 1
